--- a/assets/css/statisticContentFrame.css
+++ b/assets/css/statisticContentFrame.css
@@ -3,4 +3,4 @@
 .bcInMonth-light{display:flex;flex-direction:column;align-items:flex-start;padding:0px;flex:none;order:1;flex-grow:0;margin:0px 7.5px;position:static;width:14px;height:20px;left:136px;top:4px;}
 .bcInMonth-light-lightFrame{display:flex;flex-direction:row;align-items:flex-start;padding:0px;flex:none;order:0;flex-grow:0;margin:0px 0px;position:static;width:14px;height:0px;left:0px;top:0px;}
 .bcInMonth-light-lightFrame-lightImg{flex:none;order:0;flex-grow:0;position:static;width:14px;height:14px;left:0px;top:0px;background:url(light_37-32.png);}
-.bcInMonth-light-ligtbulb{flex:none;order:1;flex-grow:0;margin:0px 0px;position:static;left:0%;right:0%;top:0%;bottom:0%;border:2px solid #000000;}
+.bcInMonth-light-ligtbulb{flex:none;order:1;flex-grow:0;margin:0px 0px;position:static;left:0%;right:0%;top:0%;bottom:0%;}
