--- a/inst/assets/css/page/footer2.css
+++ b/inst/assets/css/page/footer2.css
@@ -1,4 +1,4 @@
-.footer{display:flex;flex-direction:row;justify-content:space-between;align-items:center;padding:17px 30px;position:relative;width:375px;height:103px;background:#FFFFFF;box-shadow:0px -4px 4px rgba(0, 0, 0, 0.25);}
+/*.footer{display:flex;flex-direction:row;justify-content:space-between;align-items:center;padding:17px 30px;position:relative;width:375px;height:103px;background:#FFFFFF;box-shadow:0px -4px 4px rgba(0, 0, 0, 0.25);} */
 .footer-buttonHolderGraph{display:flex;flex-direction:column;justify-content:center;align-items:center;padding:0px;flex:none;order:0;flex-grow:0;position:static;width:48px;height:63px;left:163.5px;top:20px;
   text-align: center;
 }
