--- a/inst/assets/css/page/maskBtn2.css
+++ b/inst/assets/css/page/maskBtn2.css
@@ -33,10 +33,10 @@ width: 40px;
 height: 40px;
 
 border-radius: 40px;
--webkit-mask-image: url(/lib/attachment-1/home.svg);
+-webkit-mask-image: url(/lib/econApp-1.0.0/img/home.svg);
 -webkit-mask-repeat: no-repeat;
 -webkit-mask-position: center;
-mask-image: url(/lib/attachment-1/home.svg);
+mask-image: url(/lib/econApp-1.0.0/img/home.svg);
 mask-repeat: no-repeat;
 mask-position: center;
 }
@@ -45,8 +45,8 @@ mask-position: center;
   background: black;
 }
 .mask-btn.home .mask-image {
-    -webkit-mask-image: url(/lib/attachment-1/home.svg);
-    mask-image: url(/lib/attachment-1/home.svg);
+    -webkit-mask-image: url(/lib/econApp-1.0.0/img/home.svg);
+    mask-image: url(/lib/econApp-1.0.0/img/home.svg);
 }
 .mask-image::before {
 /* filter color */
@@ -59,20 +59,20 @@ background: #000000;
 border-radius: 40px;
 }
 .mask-btn.econData .mask-image {
-    -webkit-mask-image: url(/lib/attachment-1/econData.svg);
-    mask-image: url(/lib/attachment-1/econData.svg);
+    -webkit-mask-image: url(/lib/econApp-1.0.0/img/econData.svg);
+    mask-image: url(/lib/econApp-1.0.0/img/econData.svg);
 }
 .mask-btn.findThings .mask-image {
-    -webkit-mask-image: url(/lib/attachment-1/findThings.svg);
-    mask-image: url(/lib/attachment-1/findThings.svg);
+    -webkit-mask-image: url(/lib/econApp-1.0.0/img/findThings.svg);
+    mask-image: url(/lib/econApp-1.0.0/img/findThings.svg);
 }
 .mask-btn.findPerson .mask-image {
-    -webkit-mask-image: url(/lib/attachment-1/findPerson.svg);
-    mask-image: url(/lib/attachment-1/findPerson.svg);
+    -webkit-mask-image: url(/lib/econApp-1.0.0/img/findPerson.svg);
+    mask-image: url(/lib/econApp-1.0.0/img/findPerson.svg);
 }
 .mask-btn.return .mask-image {
-    -webkit-mask-image: url(/lib/attachment-1/return.svg);
-    mask-image: url(/lib/attachment-1/return.svg);
+    -webkit-mask-image: url(/lib/econApp-1.0.0/img/return.svg);
+    mask-image: url(/lib/econApp-1.0.0/img/return.svg);
 }
 .mask-btn.on .mask-color {
     background: #6FCF97;
