--- a/inst/assets/css/calendar.css
+++ b/inst/assets/css/calendar.css
@@ -1,3 +1,3 @@
 .calendar{display:flex;flex-direction:column;align-items:flex-start;padding:0px;position:relative;width:100px;height:-webkit-fill-available;border-radius:20px;}
-.calendar-date{display:flex;flex-direction:row;justify-content:center;align-items:center;padding:10px 0px 5px;gap:10px;flex:none;order:0;align-self:stretch;flex-grow:1;box-sizing:border-box;height:136px;background:#FFFFFF;border:8px solid #219653;border-radius:20px;}
-.calendar-date-number{flex:none;order:0;flex-grow:0;height:59px;font-family:'Roboto';font-style:normal;font-weight:400;font-size:24px;line-height:59px;color:#219653;}
+.calendar-date{display:flex;flex-direction:row;justify-content:center;align-items:center;padding:10px 0px 5px;gap:10px;flex:none;order:0;align-self:stretch;flex-grow:1;box-sizing:border-box;height:136px;background:#FFFFFF;border:8px solid #F2C94C;border-radius:20px;}
+.calendar-date-number{flex:none;order:0;flex-grow:0;height:59px;font-family:'Roboto';font-style:normal;font-weight:400;font-size:24px;line-height:59px;color:#F2994A;}
