--- a/inst/assets/css/interna.css
+++ b/inst/assets/css/interna.css
@@ -2,6 +2,6 @@
 .interna-icon{flex:none;order:0;flex-grow:0;margin:px;width:62.65px;height:55px;}
 .icon{display:flex;flex-direction:column;align-items:flex-start;padding:10px;gap:10px;position:absolute;width:62.65px;height:55px;left:0px;top:0px;}
 .Vector{flex:none;order:0;flex-grow:0;width:42.65px;height:35px;border:4px solid #0FA958;}
-.interna-content{display:flex;flex-direction:column;justify-content:flex-end;align-items:flex-end;padding:10px;gap:5px;flex:none;order:1;align-self:stretch;flex-grow:1;margin:px;width:307.35px;}
+.interna-content{display:flex;flex-direction:column;justify-content:flex-end;align-items:flex-end;padding:10px;gap:5px;flex:none;order:1;align-self:stretch;flex-grow:1;margin:px;width:min-content;}
 .interna-content-head{flex:none;order:0;align-self:stretch;flex-grow:0;margin:px;height:56px;font-family:'Roboto';font-style:normal;font-weight:400;font-size:24px;line-height:28px;color:#000000;}
 .interna-content-date{flex:none;order:1;align-self:stretch;flex-grow:0;margin:px;height:23px;font-family:'Roboto';font-style:normal;font-weight:400;font-size:15px;line-height:23px;text-align:right;color:#000000;}
