--- a/inst/assets/css/pillButton.css
+++ b/inst/assets/css/pillButton.css
@@ -1,8 +1,8 @@
-.pillButton{display:flex;flex-direction:row;align-items:flex-start;padding:0px;position:relative;width:-webkit-fill-available;height:43px;}
-.pillButton-availability{display:flex;flex-direction:row;align-items:center;padding:0px 1px 0px 8px;gap:3px;flex:none;order:0;align-self:stretch;flex-grow:1;margin:px;box-sizing:border-box;width:40%;border:2px solid #27AE60;border-radius:100px 0px 0px 100px;}
+.pillButton{display:flex;flex-direction:row;align-items:flex-start;padding:0px;position:relative;width:100%;height:43px;}
+.pillButton-availability{display:flex;flex-direction:row;align-items:center;padding:0px 1px 0px 8px;gap:3px;flex:none;order:0;align-self:stretch;flex-grow:1;margin:px;box-sizing:border-box;width:50%;border:2px solid #27AE60;border-radius:100px 0px 0px 100px;}
 .pillButton-availability-icon{flex:none;order:0;flex-grow:0;margin:px;width:20px;height:20px;}
 .iconAvailable{position:absolute;width:20px;height:20px;left:0px;top:0px;}
 .Vector{position:absolute;left:0%;right:0%;top:0%;bottom:0%;background:#27AE60;}
 .pillButton-availability-number{flex:none;order:1;flex-grow:1;margin:px;width:min-content;font-family:'Roboto';font-style:normal;font-weight:400;font-size:16px;line-height:19px;color:#000000;}
-.pillButton-action{display:flex;flex-direction:row;justify-content:center;align-items:center;padding:10px 10px 10px 5px;flex:none;order:1;align-self:stretch;flex-grow:0;margin:px;width:40%;background:#27AE60;border-radius:0px 100px 100px 0px;}
-.pillButton-action-type{flex:none;order:0;flex-grow:0;width:max-content;height:19px;font-family:'Roboto';font-style:normal;font-weight:400;font-size:16px;line-height:19px;color:#FFFFFF;}
+.pillButton-action{display:flex;flex-direction:row;justify-content:center;align-items:center;/*padding:10px 10px 10px 5px;*/flex:none;order:1;align-self:stretch;flex-grow:0;margin:px;width:50%;background:#27AE60;border-radius:0px 100px 100px 0px;}
+.pillButton-action-type{flex:none;order:0;flex-grow:0;/*width:max-content;*/height:19px;font-family:'Roboto';font-style:normal;font-weight:400;font-size:16px;line-height:19px;color:#FFFFFF;}
